--- a/app/src/main/res/values-xhdpi/dimens.xml
+++ b/app/src/main/res/values-xhdpi/dimens.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 22.01.20 19:22
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -13,4 +13,5 @@
 
 	<dimen name="auth_tv_slogan1">48sp</dimen>
 	<dimen name="auth_tv_slogan2">22sp</dimen>
+	<dimen name="collapseBarHeight">400dp</dimen>
 </resources>
