--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 22.01.20 19:22
+  ~ Last modified 22.01.20 19:59
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -47,6 +47,7 @@
 				android:layout_gravity="bottom"
 				android:layout_marginBottom="8dp"
 				android:background="@color/transparent"
+
 				app:tabBackground="@drawable/dot_unselected_state"
 				app:tabIndicator="@drawable/dot_selection_indicator"
 				app:tabIndicatorColor="@color/gradient1"
@@ -143,6 +144,8 @@
 		android:layout_width="wrap_content"
 		android:layout_margin="@dimen/general_margin_16"
 		android:src="@drawable/ic_profile_send_message_24dp"
+		app:backgroundTint="@color/amethyst"
+		app:rippleColor="@color/black_50"
 		app:layout_anchor="@id/appBarProfile"
 		app:layout_anchorGravity="bottom|right|end" />
 
