--- a/app/src/main/res/drawable/ic_arrow_drop_up_24dp.xml
+++ b/app/src/main/res/drawable/ic_arrow_drop_up_24dp.xml
@@ -1,18 +1,20 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 04.12.19 21:56
+  ~ Last modified 23.01.20 18:46
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
-<vector android:height="24dp"
-    android:tint="#FFFFFF"
+<vector
+    android:height="24dp"
+    android:width="24dp"
     android:viewportHeight="24.0"
     android:viewportWidth="24.0"
-    android:width="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/white_85" android:pathData="M7,10l5,5 5,-5z"/>
+
+    <path android:fillColor="@color/white" android:pathData="M7,14l5,-5 5,5z"/>
+
 </vector>
