--- a/app/src/main/res/layout/fragment_places_rv_item.xml
+++ b/app/src/main/res/layout/fragment_places_rv_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 22.01.20 19:08
+  ~ Last modified 23.01.20 21:41
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -18,7 +18,7 @@
 		<import type="android.view.View"/>
 		<variable
 			name="placeItem"
-			type="com.mmdev.business.places.entity.PlaceItem" />
+			type="com.mmdev.business.places.PlaceItem" />
 
 	</data>
 
@@ -41,7 +41,6 @@
 			android:visibility='@{placeItem.images[0].image!="" ? View.VISIBLE : View.GONE}'/>
 
 		<ImageView
-			android:id="@+id/pager_container_image_gradient"
 			android:layout_width="match_parent"
 			android:layout_height="50dp"
 			android:layout_gravity="bottom"
