--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 21.01.20 17:50
+  ~ Last modified 23.01.20 19:43
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -16,12 +16,12 @@
 	<item
 		android:id="@+id/bottomPlaces"
 		android:icon="@drawable/ic_places_24dp"
-		android:title="Places" />
+		android:title="Места" />
 
 	<item
 		android:id="@+id/bottomPairs"
 		android:icon="@drawable/ic_pairs_24dp"
-		android:title="Pairs" />
+		android:title="Пары" />
 
 	<item
 		android:id="@+id/bottomCards"
@@ -32,11 +32,11 @@
 	<item
 		android:id="@+id/bottomConversations"
 		android:icon="@drawable/ic_inbox_24dp"
-		android:title="Chats" />
+		android:title="Чаты" />
 
 	<item
 		android:id="@+id/bottomSettings"
 		android:icon="@drawable/ic_settings_24dp"
-		android:title="Settings" />
+		android:title="Настройки" />
 
 </menu>
